--- a/src/app/aside/aside.component.html
+++ b/src/app/aside/aside.component.html
@@ -3,88 +3,98 @@
   <!--  Hero image-->
 
   <div class="row">
-    <div class="col text-light bg-image d-flex flex-column align-items-center  justify-content-center"
+    <div class="col text-light bg-image d-flex flex-column align-items-center justify-content-center img-fluid"
          style="
     background-image: url('https://mdbcdn.b-cdn.net/img/new/fluid/nature/015.webp');
     height: 100vh;">
       <p class="h1 ">Crea una tarjeta de presentación profesional</p>
       <p class="h2">En tan solo unos pasos</p>
-      <button type="button" class="btn btn-primary" (click)="pulsado($event)">Empieza ya</button>
+      <a href="#creador">
+        <button type="button" class="btn btn-primary" (click)="pulsado($event)">Empieza ya</button>
+      </a>
     </div>
   </div>
 </div>
 
 <!--Funcionalidad central-->
 
-<div class="container-fluid g-0" style="min-height:800px;" >
+<div class="container-fluid g-0 " style="min-height:800px;" id="creador" data-bs-spy="scroll" [hidden]="escondido">
   <div class="row">
-    <!--        Contenedor previsualización      -->
-    <div class="col d-flex align-items-center justify-content-center">
+    <!--        Contenedor de la previsualización a la izquierda    -->
+    <div class="col d-flex align-items-center justify-content-center" style="min-height:600px;">
       <!--        Tarjeta      -->
-      <div class="p-4 bg-dark text-light dispHorizontal rounded-3">
+      <div class="p-4 text-light dispHorizontal rounded-3" [style.background-color]="estilo.color3">
 
         <!--        Foto e info principal      -->
 
         <div class="row">
           <div class="col-4"><img src="https://placehold.co/200x200" class="rounded img-fluid"></div>
           <div class="col-8">
-            <p class="text-light h2">{{nombre}}</p>
-            <p class="text-light h6">{{profesion}}</p>
-            <div class="text-light">hola&#64;ejemplo.com</div>
-            <div class="text-light">+34 123 456 789</div>
+            <p class="h2" [style.color]="estilo.color1">{{persona.nombre}}</p>
+            <p class="h6" [style.color]="estilo.color2">{{persona.profesion}}</p>
+            <div class="text-light" [style.color]="estilo.color2">{{persona.mail}}</div>
+            <div class="text-light" [style.color]="estilo.color2">{{persona.movil}}</div>
           </div>
         </div>
         <!--        Información extra      -->
         <div class="row pt-3">
-          <div class="col">Empresa</div>
-          <div class="col">Dirección</div>
-          <div class="col">Info extra</div>
+          <div class="col">{{persona.empresa}}</div>
+          <div class="col">{{persona.web}}</div>
         </div>
 
         <!--        Información social      -->
         <div class="row pt-3">
-          <div class="col">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook"
+          <div class="col ">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                 class="bi bi-facebook me-2"
                  viewBox="0 0 16 16">
               <path
                 d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
             </svg>
+            <small>{{social.facebook}}</small>
           </div>
           <div class="col">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-twitter"
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                 class="bi bi-twitter me-2"
                  viewBox="0 0 16 16">
               <path
                 d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334q.002-.211-.006-.422A6.7 6.7 0 0 0 16 3.542a6.7 6.7 0 0 1-1.889.518 3.3 3.3 0 0 0 1.447-1.817 6.5 6.5 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.32 9.32 0 0 1-6.767-3.429 3.29 3.29 0 0 0 1.018 4.382A3.3 3.3 0 0 1 .64 6.575v.045a3.29 3.29 0 0 0 2.632 3.218 3.2 3.2 0 0 1-.865.115 3 3 0 0 1-.614-.057 3.28 3.28 0 0 0 3.067 2.277A6.6 6.6 0 0 1 .78 13.58a6 6 0 0 1-.78-.045A9.34 9.34 0 0 0 5.026 15"/>
             </svg>
+            <small>{{social.twitter}}</small>
           </div>
           <div class="col">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram"
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                 class="bi bi-instagram me-2"
                  viewBox="0 0 16 16">
               <path
                 d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"/>
             </svg>
+            <small>{{social.instagram}}</small>
           </div>
           <div class="col">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin"
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                 class="bi bi-linkedin me-2"
                  viewBox="0 0 16 16">
               <path
                 d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
             </svg>
+            <small>{{social.linkedin}}</small>
           </div>
         </div>
       </div>
 
     </div>
 
-    <!--        Contenedor de opciones      -->
-    <div class="col pt-2 px-0 mx-0" [hidden]="escondido">
+    <!--        Contenedor de las opciones a la derecha     -->
+    <div class="col pt-2 px-0 mx-0">
 
       <ul class="nav nav-tabs nav-fill ">
         <li class="nav-item">
           <a class="nav-link" [class.active]="tabActive===1" id="tabEstilo" (click)="tabSelect('estilo')">Estilo</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [class.active]="tabActive===2" id="tabOpciones" (click)="tabSelect('opciones')">Opciones</a>
+          <a class="nav-link" [class.active]="tabActive===2" id="tabOpciones"
+             (click)="tabSelect('opciones')">Opciones</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [class.active]="tabActive===3" id="tabInfo" (click)="tabSelect('info')">Información</a>
@@ -94,42 +104,136 @@
         </li>
       </ul>
 
-      <!--        Información básica      -->
+
       <div class="row" [ngSwitch]="tabActive">
-        <div class="col py-5 px-5 border border-top-0" *ngSwitchCase="1" id="divInfo">
+
+
+        <!--        Estilo      -->
+        <div class="col py-5 px-5 border border-top-0" *ngSwitchCase="1" id="divEstilo">
+          <h5>Dale tu toque personal</h5>
+
+
+          <!-- Forma de la imagen -->
+
+          <div class="pt-3">
+            <h6>Imagen cuadrada o redonda</h6>
+
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="imagenRadio" id="imagenRadio1" checked>
+              <label class="form-check-label" for="imagenRadio1">
+                Horizontal
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="imagenRadio" id="imagenRadio2">
+              <label class="form-check-label" for="imagenRadio2">
+                Vertical
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="imagenRadio" id="imagenRadio3">
+              <label class="form-check-label" for="imagenRadio3">
+                Cuadrada
+              </label>
+            </div>
+          </div>
+
+          <!-- Forma de la tarjeta -->
+          <div class="pt-3">
+            <h6>Forma de la tarjeta</h6>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="shapeRadio" id="shapeRadio1">
+              <label class="form-check-label" for="shapeRadio1">
+                Cuadrada
+              </label>
+            </div>
+            <div class="form-check ">
+              <input class="form-check-input" type="radio" name="flexRadioDefault" id="shapeRadio2">
+              <label class="form-check-label" for="shapeRadio2">
+                Redonda
+              </label>
+            </div>
+
+          </div>
+
+
+          <!-- Colores -->
+          <label for="ColorPrincipal" class="form-label h6 pt-3">Color de texto principal</label>
+          <input type="color" class="form-control form-control-color" id="ColorPrincipal" value="#ffffff"
+                 title="Choose your color" [(ngModel)]="estilo.color1">
+          <label for="ColorPrincipal" class="form-label h6 pt-3">Color de texto secundario</label>
+          <input type="color" class="form-control form-control-color" id="ColorSecundario" value="#f0f0f0"
+                 title="Choose your color" [(ngModel)]="estilo.color2">
+          <label for="ColorPrincipal" class="form-label h6 pt-3">Color de fondo</label>
+          <input type="color" class="form-control form-control-color" id="ColorFondo" value="#212529"
+                 title="Choose your color" [(ngModel)]="estilo.color3">
+
+
+        </div>
+
+        <!--        Opciones      -->
+        <div class="col py-5 px-5 border border-top-0" *ngSwitchCase="2" id="divOpciones">
+          <h5>Placeholder opciones</h5>
+
+          <div class="pt-3">
+            <h6>Cambiar</h6>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
+              <label class="form-check-label" for="flexRadioDefault2">
+                Cambiar
+              </label>
+            </div>
+            <div class="form-check ">
+              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
+              <label class="form-check-label" for="flexRadioDefault2">
+                Cambiar
+              </label>
+            </div>
+
+          </div>
+
+
+        </div>
+
+        <!--        Información básica      -->
+        <div class="col py-5 px-5 border border-top-0" *ngSwitchCase="3" id="divInfo">
 
           <h5>Información básica</h5>
 
           <div class="form-floating my-3">
-            <input type="text" class="form-control" id="inputNombre" placeholder="Nombre" [(ngModel)]="nombre">
+            <input type="text" class="form-control" id="inputNombre" placeholder="Nombre" [(ngModel)]="persona.nombre">
             <label>Nombre</label>
           </div>
           <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="inputMail" placeholder="Correo Electrónico" [(ngModel)]="mail">
+            <input type="email" class="form-control" id="inputMail" placeholder="Correo Electrónico"
+                   [(ngModel)]="persona.mail">
             <label>Correo Electrónico</label>
           </div>
           <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="inputWork" placeholder="Profesión" [(ngModel)]="profesion">
+            <input type="text" class="form-control" id="inputWork" placeholder="Profesión"
+                   [(ngModel)]="persona.profesion">
             <label>Profesión</label>
           </div>
           <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="inputWPlace" placeholder="Correo Electrónico">
+            <input type="text" class="form-control" id="inputWPlace" placeholder="Correo Electrónico"
+                   [(ngModel)]="persona.empresa">
             <label>Empresa</label>
           </div>
           <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="inputStreet" placeholder="Correo Electrónico">
+            <input type="text" class="form-control" id="inputStreet" placeholder="Correo Electrónico"
+                   [(ngModel)]="persona.web">
             <label>Dirección</label>
           </div>
           <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="inputMovil" placeholder="Correo Electrónico">
+            <input type="text" class="form-control" id="inputMovil" placeholder="Correo Electrónico"
+                   [(ngModel)]="persona.movil">
             <label>Móvil</label>
           </div>
 
         </div>
 
-
         <!--        Social      -->
-        <div class="col py-5 px-5 border border-top-0" *ngSwitchCase="2" id="divSocial">
+        <div class="col py-5 px-5 border border-top-0 text-" *ngSwitchCase="4" id="divSocial">
 
           <h5>Comparte tus redes sociales</h5>
 
@@ -142,7 +246,8 @@
             <label>Instagram</label>
           </div>
           <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="inputFacebook" placeholder="Facebook">
+            <input type="text" class="form-control" id="inputFacebook" placeholder="Facebook"
+                   [(ngModel)]="social.facebook">
             <label>Facebook</label>
           </div>
           <div class="form-floating mb-3">
@@ -153,94 +258,6 @@
             <input type="text" class="form-control" id="inputTikTok" placeholder="TikTok">
             <label>TikTok</label>
           </div>
-        </div>
-
-
-        <div class="col py-5 px-5 border border-top-0" *ngSwitchCase="3" id="divEstilo">
-          <h5>Dale tu toque personal</h5>
-
-          <div class="pt-3">
-            <h6>Imagen cuadrada o redonda</h6>
-
-            <div class="form-check">
-              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked>
-              <label class="form-check-label" for="flexRadioDefault1">
-                Horizontal
-              </label>
-            </div>
-            <div class="form-check">
-              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-              <label class="form-check-label" for="flexRadioDefault2">
-                Vertical
-              </label>
-            </div>
-            <div class="form-check">
-              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
-              <label class="form-check-label" for="flexRadioDefault2">
-                Cuadrada
-              </label>
-            </div>
-          </div>
-
-          <div class="pt-3">
-            <h6>Forma de la tarjeta</h6>
-            <div class="form-check">
-              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
-              <label class="form-check-label" for="flexRadioDefault2">
-                Redonda
-              </label>
-            </div>
-            <div class="form-check ">
-              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
-              <label class="form-check-label" for="flexRadioDefault2">
-                Cuadrada
-              </label>
-            </div>
-
-          </div>
-          <label for="ColorPrincipal" class="form-label h6 pt-3">Color de texto principal</label>
-          <input type="color" class="form-control form-control-color" id="ColorPrincipal" value="#563d7c"
-                 title="Choose your color">
-          <label for="ColorPrincipal" class="form-label h6 pt-3">Color de texto secundario</label>
-          <input type="color" class="form-control form-control-color" id="ColorPrincipal" value="#563d7c"
-                 title="Choose your color">
-          <label for="ColorPrincipal" class="form-label h6 pt-3">Color de fondo</label>
-          <input type="color" class="form-control form-control-color" id="ColorPrincipal" value="#563d7c"
-                 title="Choose your color">
-
-
-        </div>
-
-        <div class="col py-5 px-5 border border-top-0" *ngSwitchCase="4" id="divEstilo">
-          <h5>Placeholder opciones</h5>
-
-          <div class="pt-3">
-            <h6>Forma de la tarjeta</h6>
-            <div class="form-check">
-              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
-              <label class="form-check-label" for="flexRadioDefault2">
-                Redonda
-              </label>
-            </div>
-            <div class="form-check ">
-              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
-              <label class="form-check-label" for="flexRadioDefault2">
-                Cuadrada
-              </label>
-            </div>
-
-          </div>
-          <label for="ColorPrincipal" class="form-label h6 pt-3">Color de texto principal</label>
-          <input type="color" class="form-control form-control-color" id="ColorPrincipal" value="#563d7c"
-                 title="Choose your color">
-          <label for="ColorPrincipal" class="form-label h6 pt-3">Color de texto secundario</label>
-          <input type="color" class="form-control form-control-color" id="ColorPrincipal" value="#563d7c"
-                 title="Choose your color">
-          <label for="ColorPrincipal" class="form-label h6 pt-3">Color de fondo</label>
-          <input type="color" class="form-control form-control-color" id="ColorPrincipal" value="#563d7c"
-                 title="Choose your color">
-
-
         </div>
 
 
