--- a/src/app/aside/aside.component.html
+++ b/src/app/aside/aside.component.html
@@ -10,7 +10,7 @@
       <p class="h1 ">Crea una tarjeta de presentación profesional</p>
       <p class="h2">En tan solo unos pasos</p>
       <a href="#creador">
-        <button type="button" class="btn btn-primary" (click)="pulsado($event)">Empieza ya</button>
+        <button type="button" class="btn btn-primary" (click)="pulsado()">Empieza ya</button>
       </a>
     </div>
   </div>
@@ -116,7 +116,7 @@
           <!-- Forma de la imagen -->
 
           <div class="pt-3">
-            <h6>Imagen cuadrada o redonda</h6>
+            <h6>Forma de la tarjeta</h6>
 
             <div class="form-check">
               <input class="form-check-input" type="radio" name="imagenRadio" id="imagenRadio1" checked>
@@ -140,9 +140,9 @@
 
           <!-- Forma de la tarjeta -->
           <div class="pt-3">
-            <h6>Forma de la tarjeta</h6>
+            <h6>Forma de la imagen</h6>
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="shapeRadio" id="shapeRadio1">
+              <input class="form-check-input" type="radio" name="shapeRadio" id="shapeRadio1" checked>
               <label class="form-check-label" for="shapeRadio1">
                 Cuadrada
               </label>
