--- a/src/app/aside/aside.component.css
+++ b/src/app/aside/aside.component.css
@@ -1,12 +1,11 @@
 .dispCuadrada{
   display: flex;
-  height: 200px;
-  width: 200px;
+  height: auto;
+  aspect-ratio : 1 / 1;
 }
 
 .dispHorizontal{
   height: auto;
+  aspect-ratio : 2 / 1;
   width: 500px;
 }
-
-
