--- a/src/app/aside/aside.component.html
+++ b/src/app/aside/aside.component.html
@@ -30,21 +30,21 @@
         <div class="row">
           <div class="col-4"><img src="https://placehold.co/200x200" class="rounded img-fluid"></div>
           <div class="col-8">
-            <p class="h2" [style.color]="estilo.color1">{{persona.nombre}}</p>
-            <p class="h6" [style.color]="estilo.color2">{{persona.profesion}}</p>
-            <div class="text-light" [style.color]="estilo.color2">{{persona.mail}}</div>
-            <div class="text-light" [style.color]="estilo.color2">{{persona.movil}}</div>
+            <p class="h2" [style.color]="estilo.color1" *ngIf="campos.cambiar1">{{persona.nombre}}</p>
+            <p class="h6" [style.color]="estilo.color2" *ngIf="campos.cambiar2">{{persona.profesion}}</p>
+            <div class="text-light" [style.color]="estilo.color2" *ngIf="campos.cambiar3">{{persona.mail}}</div>
+            <div class="text-light" [style.color]="estilo.color2" *ngIf="campos.cambiar4">{{persona.movil}}</div>
           </div>
         </div>
         <!--        Información extra      -->
         <div class="row pt-3">
-          <div class="col">{{persona.empresa}}</div>
-          <div class="col">{{persona.web}}</div>
+          <div class="col" *ngIf="campos.cambiar5">{{persona.empresa}}</div>
+          <div class="col" *ngIf="campos.cambiar6">{{persona.web}}</div>
         </div>
 
         <!--        Información social      -->
         <div class="row pt-3">
-          <div class="col ">
+          <div class="col" *ngIf="campos.cambiar7">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                  class="bi bi-facebook me-2"
                  viewBox="0 0 16 16">
@@ -53,7 +53,7 @@
             </svg>
             <small>{{social.facebook}}</small>
           </div>
-          <div class="col">
+          <div class="col" *ngIf="campos.cambiar8">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                  class="bi bi-twitter me-2"
                  viewBox="0 0 16 16">
@@ -62,7 +62,7 @@
             </svg>
             <small>{{social.twitter}}</small>
           </div>
-          <div class="col">
+          <div class="col" *ngIf="campos.cambiar9">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                  class="bi bi-instagram me-2"
                  viewBox="0 0 16 16">
@@ -71,7 +71,7 @@
             </svg>
             <small>{{social.instagram}}</small>
           </div>
-          <div class="col">
+          <div class="col" *ngIf="campos.cambiar10">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                  class="bi bi-linkedin me-2"
                  viewBox="0 0 16 16">
@@ -178,15 +178,63 @@
           <div class="pt-3">
             <h6>Cambiar</h6>
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
+              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" [(ngModel)]="campos.cambiar1">
               <label class="form-check-label" for="flexRadioDefault2">
-                Cambiar
+                Profesión
               </label>
             </div>
             <div class="form-check ">
-              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
+              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" [(ngModel)]="campos.cambiar2">
               <label class="form-check-label" for="flexRadioDefault2">
-                Cambiar
+                Correo Electrónico
+              </label>
+            </div>
+            <div class="form-check ">
+              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" [(ngModel)]="campos.cambiar3">
+              <label class="form-check-label" for="flexRadioDefault2">
+                Móvil
+              </label>
+            </div>
+            <div class="form-check ">
+              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" [(ngModel)]="campos.cambiar4">
+              <label class="form-check-label" for="flexRadioDefault2">
+                Empresa
+              </label>
+            </div>
+            <div class="form-check ">
+              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" [(ngModel)]="campos.cambiar5">
+              <label class="form-check-label" for="flexRadioDefault2">
+                Dirección
+              </label>
+            </div>
+            <div class="form-check ">
+              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" [(ngModel)]="campos.cambiar6">
+              <label class="form-check-label" for="flexRadioDefault2">
+                Facebook
+              </label>
+            </div>
+            <div class="form-check ">
+              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" [(ngModel)]="campos.cambiar7">
+              <label class="form-check-label" for="flexRadioDefault2">
+                Twitter
+              </label>
+            </div>
+            <div class="form-check ">
+              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" [(ngModel)]="campos.cambiar8">
+              <label class="form-check-label" for="flexRadioDefault2">
+                LinkedIn
+              </label>
+            </div>
+            <div class="form-check ">
+              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" [(ngModel)]="campos.cambiar9">
+              <label class="form-check-label" for="flexRadioDefault2">
+                Instagram
+              </label>
+            </div>
+            <div class="form-check ">
+              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" [(ngModel)]="campos.cambiar10">
+              <label class="form-check-label" for="flexRadioDefault2">
+                YouTube
               </label>
             </div>
 
