--- a/src/app/aside/aside.component.html
+++ b/src/app/aside/aside.component.html
@@ -38,7 +38,7 @@
         </div>
         <!--        Información extra      -->
         <div class="row pt-3">
-          <div class="col">{{persona.empresa}}</div>
+          <div class="col" *ngIf="campos.switch1">{{persona.empresa}}</div>
           <div class="col">{{persona.web}}</div>
         </div>
 
@@ -71,7 +71,7 @@
             </svg>
             <small>{{social.instagram}}</small>
           </div>
-          <div class="col">
+          <div class="col" *ngIf="campos.switch1">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                  class="bi bi-linkedin me-2"
                  viewBox="0 0 16 16">
@@ -187,6 +187,12 @@
               <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
               <label class="form-check-label" for="flexRadioDefault2">
                 Cambiar
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" [(ngModel)]="campos.switch1">
+              <label class="form-check-label" for="flexCheckDefault">
+                Default checkbox
               </label>
             </div>
 
