Cambio de radio buttons a switches
También he añadido encabezados.

--- a/src/app/aside/aside.component.html
+++ b/src/app/aside/aside.component.html
@@ -176,64 +176,70 @@
           <h5>Placeholder opciones</h5>
 
           <div class="pt-3">
-            <h6>Cambiar</h6>
-            <div class="form-check">
-              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" [(ngModel)]="campos.cambiar1">
-              <label class="form-check-label" for="flexRadioDefault2">
+            <h6>Datos de contacto</h6>
+            <div class="form-check form-switch">
+              <input class="form-check-input" type="checkbox" [(ngModel)]="campos.cambiar1">
+              <label class="form-check-label">
                 Profesión
               </label>
             </div>
-            <div class="form-check ">
-              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" [(ngModel)]="campos.cambiar2">
-              <label class="form-check-label" for="flexRadioDefault2">
+            <div class="form-check form-switch">
+              <input class="form-check-input" type="checkbox" [(ngModel)]="campos.cambiar2">
+              <label class="form-check-label">
                 Correo Electrónico
               </label>
             </div>
-            <div class="form-check ">
-              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" [(ngModel)]="campos.cambiar3">
-              <label class="form-check-label" for="flexRadioDefault2">
+            <div class="form-check  form-switch">
+              <input class="form-check-input" type="checkbox" [(ngModel)]="campos.cambiar3">
+              <label class="form-check-label">
                 Móvil
               </label>
             </div>
-            <div class="form-check ">
-              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" [(ngModel)]="campos.cambiar4">
-              <label class="form-check-label" for="flexRadioDefault2">
+          </div>
+          <div class="pt-3">
+            <h6>Otros</h6>
+            <div class="form-check  form-switch">
+              <input class="form-check-input" type="checkbox" [(ngModel)]="campos.cambiar4">
+              <label class="form-check-label">
                 Empresa
               </label>
             </div>
-            <div class="form-check ">
-              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" [(ngModel)]="campos.cambiar5">
-              <label class="form-check-label" for="flexRadioDefault2">
+            <div class="form-check  form-switch">
+              <input class="form-check-input" type="checkbox" [(ngModel)]="campos.cambiar5">
+              <label class="form-check-label">
                 Dirección
               </label>
             </div>
-            <div class="form-check ">
-              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" [(ngModel)]="campos.cambiar6">
-              <label class="form-check-label" for="flexRadioDefault2">
+          </div>
+          <div class="pt-3">
+            <h6>Redes sociales</h6>
+            <div class="form-check  form-switch">
+              <input class="form-check-input" type="checkbox" [(ngModel)]="campos.cambiar6">
+              <label class="form-check-label">
                 Facebook
               </label>
             </div>
-            <div class="form-check ">
-              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" [(ngModel)]="campos.cambiar7">
-              <label class="form-check-label" for="flexRadioDefault2">
+            <div class="form-check  form-switch">
+              <input class="form-check-input" type="checkbox" [(ngModel)]="campos.cambiar7">
+              <label class="form-check-label">
                 Twitter
               </label>
             </div>
-            <div class="form-check ">
-              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" [(ngModel)]="campos.cambiar8">
-              <label class="form-check-label" for="flexRadioDefault2">
+            <div class="form-check  form-switch">
+              <input class="form-check-input" type="checkbox" [(ngModel)]="campos.cambiar8">
+              <label class="form-check-label">
                 LinkedIn
               </label>
             </div>
-            <div class="form-check ">
-              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" [(ngModel)]="campos.cambiar9">
-              <label class="form-check-label" for="flexRadioDefault2">
+            <div class="form-check form-switch ">
+              <input class="form-check-input" type="checkbox" [(ngModel)]="campos.cambiar9">
+              <label class="form-check-label">
                 Instagram
               </label>
             </div>
-            <div class="form-check ">
-              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" [(ngModel)]="campos.cambiar10">
-              <label class="form-check-label" for="flexRadioDefault2">
+            <div class="form-check  form-switch">
+              <input class="form-check-input" type="checkbox" [(ngModel)]="campos.cambiar10">
+              <label class="form-check-label">
                 YouTube
               </label>
             </div>
