--- a/src/app/aside/aside.component.html
+++ b/src/app/aside/aside.component.html
@@ -4,11 +4,10 @@
 
   <div class="row">
     <div class="col text-light bg-image d-flex flex-column align-items-center justify-content-center img-fluid"
-         style="
-    background-image: url('https://mdbcdn.b-cdn.net/img/new/fluid/nature/015.webp');
+         style="background-image: url('https://images.ctfassets.net/cma41nsiygxr/WnutuzsBcMfd98rmTKMX3/72a7f8b1e52252bf81b7eef6dc4a310a/banner_insieme_d.jpg?fm=avif&w=1340');
     height: 100vh;">
-      <p class="h1 ">Crea una tarjeta de presentación profesional</p>
-      <p class="h2">En tan solo unos pasos</p>
+      <p class="h1 titulo">Crea una tarjeta de presentación profesional</p>
+      <p class="h2 subtitulo">En tan solo unos pasos</p>
       <a href="#creador">
         <button type="button" class="btn btn-primary" (click)="pulsado()">Empieza ya</button>
       </a>
@@ -86,7 +85,7 @@
     </div>
 
     <!--        Contenedor de las opciones a la derecha     -->
-    <div class="col pt-2 px-0 mx-0">
+    <div class="col pt-2 px-0 mx-0 derecha">
 
       <ul class="nav nav-tabs nav-fill ">
         <li class="nav-item">
