--- a/src/app/aside/aside.component.css
+++ b/src/app/aside/aside.component.css
@@ -9,3 +9,20 @@
   aspect-ratio : 2 / 1;
   width: 500px;
 }
+
+.derecha{
+  background-color: antiquewhite;
+}
+
+.titulo{
+  color: black;
+}
+
+.subtitulo{
+  color: black;
+}
+
+.btn{
+  background-color: antiquewhite;
+  color: black;
+}
