probando formas tarjeta y claro oscuro
No he conseguido realizar el codigo, tengo la sensacion que es bastante similar al de la imagen redonda pero no consigo ver como hacerlo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid general">
+<div class="container-fluid general" [style.background-color]="color">
 <app-nav></app-nav>
 <app-aside></app-aside>
 </div>
