--- a/src/app/aside/aside.component.html
+++ b/src/app/aside/aside.component.html
@@ -22,7 +22,7 @@
     <!--        Contenedor de la previsualización a la izquierda    -->
     <div class="col d-flex align-items-center justify-content-center" style="min-height:600px;">
       <!--        Tarjeta      -->
-      <div class="p-4 text-light dispHorizontal rounded-3" [style.background-color]="estilo.color3">
+      <div class="p-4 text-light dispHorizontal rounded-3" [style.background-color]="estilo.color3" [class.forma-tarjeta]="estilo.dispCuadrada">
 
         <!--        Foto e info principal      -->
 
