--- a/src/app/aside/aside.component.html
+++ b/src/app/aside/aside.component.html
@@ -2,15 +2,18 @@
 
   <!--  Hero image-->
 
-  <div class="row">
-    <div class="col text-light bg-image d-flex flex-column align-items-center justify-content-center img-fluid"
+  <div class="row ">
+    <div class="col d-flex flex-column align-items-center justify-content-center img-fluid"
          style="background-image: url('https://images.ctfassets.net/cma41nsiygxr/WnutuzsBcMfd98rmTKMX3/72a7f8b1e52252bf81b7eef6dc4a310a/banner_insieme_d.jpg?fm=avif&w=1340');
-    height: 100vh;">
-      <p class="h1 titulo">Crea una tarjeta de presentación profesional</p>
-      <p class="h2 subtitulo">En tan solo unos pasos</p>
-      <a href="#creador">
-        <button type="button" class="btn btn-primary" (click)="pulsado()">Empieza ya</button>
-      </a>
+    height: 100vh; background-repeat: no-repeat; background-size: cover; box-shadow: inset 0 0 0 1000px rgba(0,0,0,.5);">
+
+        <p class="h1 antique">Crea una tarjeta de presentación profesional</p>
+        <p class="h2 antique">En tan solo unos pasos</p>
+        <a href="#creador">
+          <button type="button" class="btn btn-primary btn-lg mt-4" (click)="pulsado()">Empieza ya</button>
+        </a>
+
+
     </div>
   </div>
 </div>
