--- a/src/app/aside/aside.component.css
+++ b/src/app/aside/aside.component.css
@@ -14,15 +14,25 @@
   background-color: antiquewhite;
 }
 
-.titulo{
-  color: black;
-}
+/*.titulo{*/
+/*  color: black;*/
+/*}*/
 
-.subtitulo{
-  color: black;
+/*.subtitulo{*/
+/*  color: black;*/
+/*}*/
+
+.antique{
+  color: antiquewhite;
 }
 
 .btn{
   background-color: antiquewhite;
   color: black;
+  border: none;
+}
+
+.btn:hover{
+  background-color: black;
+  color: antiquewhite;
 }
