Dark Mode! + Cambio de forma de la tarjeta hecho

--- a/src/app/aside/aside.component.css
+++ b/src/app/aside/aside.component.css
@@ -1,13 +1,14 @@
 .dispCuadrada{
-  display: flex;
-  height: auto;
+  width:500px;
   aspect-ratio : 1 / 1;
+  height: auto;
 }
 
 .dispHorizontal{
-  height: auto;
+
   aspect-ratio : 2 / 1;
   width: 500px;
+  height: auto;
 }
 
 .derecha{
