--- a/src/app/aside/aside.component.html
+++ b/src/app/aside/aside.component.html
@@ -7,11 +7,11 @@
          style="background-image: url('https://images.ctfassets.net/cma41nsiygxr/WnutuzsBcMfd98rmTKMX3/72a7f8b1e52252bf81b7eef6dc4a310a/banner_insieme_d.jpg?fm=avif&w=1340');
     height: 100vh; background-repeat: no-repeat; background-size: cover; box-shadow: inset 0 0 0 1000px rgba(0,0,0,.5);">
 
-        <p class="h1 antique">Crea una tarjeta de presentación profesional</p>
-        <p class="h2 antique">En tan solo unos pasos</p>
-        <a href="#creador">
-          <button type="button" class="btn btn-primary btn-lg mt-4" (click)="pulsado()">Empieza ya</button>
-        </a>
+      <p class="h1 antique">Crea una tarjeta de presentación profesional</p>
+      <p class="h2 antique">En tan solo unos pasos</p>
+      <a href="#creador">
+        <button type="button" class="btn btn-primary btn-lg mt-4" (click)="pulsado()">Empieza ya</button>
+      </a>
 
 
     </div>
@@ -25,12 +25,13 @@
     <!--        Contenedor de la previsualización a la izquierda    -->
     <div class="col d-flex align-items-center justify-content-center" style="min-height:600px;">
       <!--        Tarjeta      -->
-      <div class="p-4 text-light dispHorizontal rounded-3" [style.background-color]="estilo.color3">
+      <div class="p-4 text-light dispCuadrada rounded-3" [style.background-color]="estilo.color3" [ngStyle]="formaTarjeta()">
 
         <!--        Foto e info principal      -->
 
         <div class="row">
-          <div class="col-4" ><img src="https://placehold.co/200x200" class="rounded img-fluid" [class.rounded-circle]="estilo.imagenRedonda"></div>
+          <div class="col-4"><img src="https://placehold.co/200x200" class="rounded img-fluid"
+                                  [class.rounded-circle]="estilo.imagenRedonda"></div>
           <div class="col-8">
             <p class="h2" [style.color]="estilo.color1">{{persona.nombre}}</p>
             <p class="h6" [style.color]="estilo.color2" *ngIf="campos.profesion">{{persona.profesion}}</p>
@@ -121,20 +122,20 @@
             <h6>Forma de la tarjeta</h6>
 
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="imagenRadio" id="imagenRadio1" checked>
-              <label class="form-check-label" for="imagenRadio1">
+              <input class="form-check-input" type="radio" name="formaRadio" id="formaRadioHoriz" checked [(ngModel)]="estilo.formaTarjeta" value="horizontal">
+              <label class="form-check-label" for="formaRadioHoriz">
                 Horizontal
               </label>
             </div>
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="imagenRadio" id="imagenRadio2">
-              <label class="form-check-label" for="imagenRadio2">
+              <input class="form-check-input" type="radio" name="formaRadio" id="formaRadioVert" [(ngModel)]="estilo.formaTarjeta" value="vertical">
+              <label class="form-check-label" for="formaRadioVert">
                 Vertical
               </label>
             </div>
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="imagenRadio" id="imagenRadio3">
-              <label class="form-check-label" for="imagenRadio3">
+              <input class="form-check-input" type="radio" name="formaRadio" id="formaRadioCuad" [(ngModel)]="estilo.formaTarjeta" value="cuadrada">
+              <label class="form-check-label" for="formaRadioCuad">
                 Cuadrada
               </label>
             </div>
@@ -144,13 +145,15 @@
           <div class="pt-3">
             <h6>Forma de la imagen</h6>
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="shapeRadio" id="shapeRadio1" checked (click)="formaImagen(false)">
+              <input class="form-check-input" type="radio" name="shapeRadio" id="shapeRadio1" checked
+                     (click)="formaImagen(false)">
               <label class="form-check-label" for="shapeRadio1">
                 Cuadrada
               </label>
             </div>
             <div class="form-check ">
-              <input class="form-check-input" type="radio" name="shapeRadio" id="shapeRadio2" (click)="formaImagen(true)">
+              <input class="form-check-input" type="radio" name="shapeRadio" id="shapeRadio2"
+                     (click)="formaImagen(true)">
               <label class="form-check-label" for="shapeRadio2">
                 Redonda
               </label>
