--- a/src/app/aside/aside.component.html
+++ b/src/app/aside/aside.component.html
@@ -10,7 +10,7 @@
       <p class="h1 antique">Crea una tarjeta de presentación profesional</p>
       <p class="h2 antique">En tan solo unos pasos</p>
       <a href="#creador">
-        <button type="button" class="btn btn-primary btn-lg mt-4" (click)="pulsado()">Empieza ya</button>
+        <button type="button" class="btn btn-primary btn-lg mt-4" (click)="pulsado()" (mouseenter)="onMouseEnter()">Empieza ya</button>
       </a>
 
 
